--- a/src/components/anecdotes/Anecdotes.css
+++ b/src/components/anecdotes/Anecdotes.css
@@ -35,3 +35,10 @@
   color: #d46b08;
   font-weight: 700;
 }
+
+.create-btn {
+  background-color: orange;
+  color: white;
+  padding: 10px;
+  margin-top: 10px;
+}
