--- a/src/components/anecdotes/Anecdotes.css
+++ b/src/components/anecdotes/Anecdotes.css
@@ -36,9 +36,29 @@
   font-weight: 700;
 }
 
+.form-wrap {
+  padding: 10px;
+  margin-left: 10px;
+  display: flex;
+  width: 600px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.create-input {
+  height: 50px;
+  width: 500px;
+  padding: 10px;
+  margin-top: 10px;
+  border: none;
+  background-color: lightgray;
+}
+
 .create-btn {
   background-color: orange;
   color: white;
   padding: 10px;
   margin-top: 10px;
+  border: none;
+  width: 200px;
 }
