--- a/src/components/anecdotes/Anecdotes.css
+++ b/src/components/anecdotes/Anecdotes.css
@@ -52,6 +52,7 @@
   margin-top: 10px;
   border: none;
   background-color: lightgray;
+  text-align: center;
 }
 
 .create-btn {
@@ -61,4 +62,19 @@
   margin-top: 10px;
   border: none;
   width: 200px;
+}
+
+.filter-wrap {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-left: 20px;
+}
+
+.filter-input {
+  background-color: lightgray;
+  border: none;
+  height: 40px;
+  width: 400px;
+  border-radius: 20px;
+  text-align: center;
 }
